# flox

./: .clang-format  .gitignore  404.html  CMakeLists.txt  README.md  REFACTOR_PLAN.md  glama.json  index.html  llms-full.txt  mkdocs.yml  sitemap.xml
benchmarks/: CMakeLists.txt  backtest_benchmark.cpp  bar_aggregator_benchmark.cpp  binary_log_benchmark.cpp  cex_benchmark.cpp  event_bus_benchmark.cpp  l3_order_book_benchmark.cpp  mmap_bar_storage_benchmark.cpp  multi_symbol_benchmark.cpp  nlevel_order_book_benchmark.cpp  position_aggregator_benchmark.cpp  statistical_indicator_benchmark.cpp
connectors/: CMakeLists.txt  README.md
connectors/tests/: CMakeLists.txt
demo/: CMakeLists.txt
demo/data/: sample.floxlog
demo/src/: backtest_demo.cpp  cex_demo.cpp  demo_builder.cpp  footprint_demo.cpp  grid_search_demo.cpp  market_profile_demo.cpp  multi_timeframe_demo.cpp  volume_profile_demo.cpp
mcp/: README.md  pyproject.toml
mcp/flox_mcp/: __init__.py  cli.py  server.py
mcp/tests/: test_cli_init.py  test_custom_venue.py  test_data_artifacts.py  test_dex_mcp_tools.py  test_init_project.py  test_no_engine_messages.py  test_polyglot_tools.py  test_positions.py  test_record_data.py  test_runtime_tools.py  test_tools.py
node/: CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
node/authoring/: index.ts  tsconfig.json
node/lib/: composite.js  dex.d.ts  dex.js
node/src/: account.h  aggregators.h  amm_curve.h  backtest.h  bar_dispatch.h  books.h  data_ops.h  delta_book.h  dex_amount.h  engine.h  error_translator.h  execution_algos.h  fee_schedule.h  feed_clock.h  flox_node.cpp  funding_schedule.h  graph.h  grid_search.h  heatmap.h  hooks.h  indicators.h  latency.h  liquidation_engine.h  live_queue_position.h  order_group.h  pool_tape.h  portfolio_risk.h  positions.h  profiles.h  rate_limit.h  run_trace.h  stats.h  strategy.h  tape_aggregators.h  tape_diff.h  targets.h  venue_availability.h  venue_stack.h  walk_forward.h
node/test/: byte_identical_fixture.js  test_authoring.ts  test_backtest_run_tapes.js  test_bar_close_ordering_parity.js  test_bindings.js  test_composite.js  test_delta_book.js  test_dex.js  test_dex_types.ts  test_execution_algos.js  test_feed_clock.js  test_flox_error.js  test_hooks.js  test_hot_reload.js  test_latency.js  test_merged_tape_reader.js  test_multi_tf_alignment.js  test_order_group.js  test_portfolio_risk.js  test_progress_callback.js  test_run_trace.js  test_tape_diff.js  test_trace_attach.js  test_types.ts  tsconfig.authoring.json
python/: CMakeLists.txt  README.md  account_bindings.h  aggregator_bindings.h  amm_curve_bindings.h  backtest_bindings.h  bar_dispatch_bindings.h  bare_executor_bindings.h  book_bindings.h  composite_book_bindings.h  delta_book_bindings.h  dex_amount_bindings.h  execution_algos_bindings.h  fee_schedule_bindings.h  feed_clock_bindings.h  flox_py.cpp  funding_schedule_bindings.h  graph_bindings.h  grid_search_bindings.h  heatmap_bindings.h  hook_bindings.h  indicator_bindings.h  latency_bindings.h  liquidation_engine_bindings.h  live_queue_position_bindings.h  optimizer_bindings.h  order_group_bindings.h  order_journey_tracer_bindings.h  pool_tape_bindings.h  portfolio_risk_bindings.h  position_bindings.h  pricing_bindings.h  profile_bindings.h  pyproject.toml  rate_limit_bindings.h  replay_bindings.h  run_trace_bindings.h  segment_ops_bindings.h  strategy_bindings.h  tape_aggregator_bindings.h  (+6 more)
python/flox_py/: __init__.py  __init__.pyi  bundle.py  ccxt.py  cli.py  composite.py  control_server.py  custom_venue.py  engine_cli.py  event_log.py  execution.py  execution_algos.py  feed_clock.py  latency_models.py  live_queue_calibrator.py  lookahead.py  mlflow.py  orderbook.py  panel.py  paper.py  portfolio_risk.py  report.py  rl_env.py  rolling.py  tape.py
python/tests/: test_amm_curve.py  test_bar_close_ordering_parity.py  test_binance_archive.py  test_binance_book_archive.py  test_bindings.py  test_bitget_archive.py  test_book_snapshot_aggregator.py  test_bundle.py  test_bybit_archive.py  test_ccxt_adapter.py  test_composite_conditions.py  test_conditional_orders.py  test_control_server.py  test_ctx_position_in_backtest.py  test_delta_book.py  test_deribit_archive.py  test_dex.py  test_dex_amount.py  test_dex_router.py  test_dex_tape.py  test_engine_feed_clock.py  test_engine_order_group.py  test_engine_sim_cli.py  test_event_log.py  test_execution_algos.py  test_feed_clock.py  test_flox_new_cli.py  test_greeks.py  test_grid_search.py  test_heatmap.py  test_hooks.py  test_hurst.py  test_indicator_grid.py  test_latency_models.py  test_live_queue_calibrator.py  test_lookahead.py  test_merged_tape_reader.py  test_mlflow.py  test_multi_tf_alignment.py  test_native_import_guard.py  (+27 more)
src/capi/: CMakeLists.txt  flox_capi.cpp
src/quickjs/: CMakeLists.txt  gen_js_inc.cmake  js_bindings.cpp  js_bindings.h  js_engine.cpp  js_engine.h  js_runner.cpp  js_strategy.cpp  js_strategy.h
tests/: CMakeLists.txt  test_account.cpp  test_adaptive_fee_whirlpool_curve.cpp  test_adf.cpp  test_advanced_orders.cpp  test_aggregator_framework.cpp  test_american_pricing.cpp  test_amm_curve_clone.cpp  test_amm_dex_connector.cpp  test_amm_pool_replay_source.cpp  test_amm_pricing.cpp  test_atomic_logger.cpp  test_autocorrelation.cpp  test_backtest.cpp  test_backtest_ctx_position.cpp  test_backtest_metrics.cpp  test_backtest_queue.cpp  test_backtest_run_tape.cpp  test_backtest_runner_hooks.cpp  test_backtest_slippage.cpp  test_bar_aggregator.cpp  test_bar_close_ordering.cpp  test_binary_log.cpp  test_black_scholes.cpp  test_book_snapshot_aggregator.cpp  test_book_update_bus.cpp  test_bracket_orders.cpp  test_cancel_latency.cpp  test_capi_amm_curve.cpp  test_capi_backtest.cpp  test_capi_dex_amount.cpp  test_capi_execution_listener.cpp  test_capi_executor.cpp  test_capi_infra.cpp  test_capi_kill_switch.cpp  test_capi_logger.cpp  test_capi_market_data_recorder.cpp  test_capi_observers.cpp  test_capi_pool_tape.cpp  test_capi_registry.cpp  (+103 more)
tests/replay-equivalence/: build_tape.py  strategy.py
(+1302 files in other folders)
