find_package(benchmark REQUIRED)
find_package(Threads)

function(add_flox_benchmark name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE ${PROJECT_NAME} benchmark::benchmark)
    if(TARGET Threads::Threads)
        target_link_libraries(${name} PRIVATE Threads::Threads)
    endif()
    if(MSVC)
        target_compile_options(${name} PRIVATE $<$<CONFIG:Release>:/O2>)
    else()
        target_compile_options(${name} PRIVATE $<$<CONFIG:Release>:-O3 -march=native -flto>)
        target_link_options(${name} PRIVATE $<$<CONFIG:Release>:-flto>)
    endif()
    target_compile_definitions(${name} PRIVATE BENCHMARK_ENABLE_AGGREGATES)
endfunction()

add_flox_benchmark(nlevel_order_book_benchmark)
add_flox_benchmark(bar_aggregator_benchmark)
add_flox_benchmark(binary_log_benchmark)
add_flox_benchmark(event_bus_benchmark)
add_flox_benchmark(multi_symbol_benchmark)
add_flox_benchmark(cex_benchmark)

if(FLOX_ENABLE_CPU_AFFINITY)
    add_flox_benchmark(cpu_affinity_benchmark)
endif()
