[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "flox-py"
version = "0.6.0"
authors = [{name = "FLOX Foundation"}]
description = "Python bindings for the Flox indicator library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy"]
keywords = ["trading", "backtest", "indicators", "technical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/FLOX-Foundation/flox"

[project.scripts]
flox = "flox_py.cli:main"

[tool.scikit-build]
cmake.args = [
    "-DFLOX_ENABLE_BACKTEST=ON",
    "-DFLOX_BUILD_PYTHON=ON",
    "-DFLOX_ENABLE_LZ4=ON",
    # Wheels run on machines the build host knows nothing about; pin to
    # the portable x86-64-v3 baseline (or compiler-default on non-x86)
    # so the shipped .so does not require AVX-512 or other build-host-
    # specific instructions.
    "-DFLOX_NATIVE=OFF",
]
cmake.source-dir = ".."
# Ship the package directory (pure-Python wrapper, .pyi stubs, py.typed
# marker). The compiled `_flox_py` extension is copied into this same
# directory by the python_module install component.
wheel.packages = ["flox_py"]
install.components = ["python_module"]
