[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "flox-py"
version = "0.6.5"
authors = [{name = "FLOX Foundation"}]
description = "AI-native framework for building trading systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy"]
keywords = [
    "trading",
    "backtest",
    "crypto",
    "perpetual",
    "cross-margin",
    "liquidation",
    "funding",
    "paper-trading",
    "live-trading",
    "ccxt",
    "venue-realistic",
    "execution",
    "market-making",
    "mcp",
    "ai-agent",
    "indicators",
    "technical-analysis",
    "walk-forward",
    "monte-carlo",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
ccxt = ["ccxt[pro]>=4.0"]
mlflow = ["mlflow>=2.0"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://flox-foundation.github.io/flox/"
Documentation = "https://flox-foundation.github.io/flox/"
Repository = "https://github.com/FLOX-Foundation/flox"
Issues = "https://github.com/FLOX-Foundation/flox/issues"
Changelog = "https://github.com/FLOX-Foundation/flox/releases"

[project.scripts]
flox = "flox_py.cli:main"

[tool.scikit-build]
cmake.args = [
    "-DFLOX_ENABLE_BACKTEST=ON",
    "-DFLOX_BUILD_PYTHON=ON",
    "-DFLOX_ENABLE_LZ4=ON",
    # Wheels run on machines the build host knows nothing about; pin to
    # the portable x86-64-v3 baseline (or compiler-default on non-x86)
    # so the shipped .so does not require AVX-512 or other build-host-
    # specific instructions.
    "-DFLOX_NATIVE=OFF",
]
cmake.source-dir = ".."
# Ship the package directory (pure-Python wrapper, .pyi stubs, py.typed
# marker). The compiled `_flox_py` extension is copied into this same
# directory by the python_module install component.
wheel.packages = ["flox_py"]
install.components = ["python_module"]
